--- a/arch/arm/configs/drakester_defconfig
+++ b/arch/arm/configs/drakester_defconfig
@@ -247,7 +247,7 @@ CONFIG_IOSCHED_CFQ=y
 CONFIG_DEFAULT_ROW=y
 # CONFIG_DEFAULT_CFQ is not set
 # CONFIG_DEFAULT_NOOP is not set
-CONFIG_DEFAULT_IOSCHED="cfq"
+CONFIG_DEFAULT_IOSCHED="row"
 CONFIG_UNINLINE_SPIN_UNLOCK=y
 CONFIG_FREEZER=y
 
